# tcc-vss-vision

./: .gitignore  Ball.h  CMakeLists.txt  Colors.cpp  Colors.h  Global.cpp  Global.h  PreProcess.cpp  README.md  Robo.cpp  Robo.h  VisionManager.cpp  VisionManager.h  copyImgs.sh  main.cpp
classes/Pipe/PreProcess/: CMakeLists.txt  PreProcess.cpp  PreProcess.hpp
classes/Pipe/SegEx/: CMakeLists.txt  Segex.cpp  Segex.hpp
classes/Pipe/SegEx/Extraction/: CMakeLists.txt  Extraction.cpp  Extraction.hpp
classes/Pipe/SegEx/HSSegFull/: CMakeLists.txt  FullSeg.cpp  FullSeg.hpp
classes/Pipe/SegEx/HSSegReduced/: CMakeLists.txt  ReducedSeg.cpp  ReducedSeg.hpp
classes/Pipe1/PreProcess1/: CMakeLists.txt  PreProcessPipe1.cpp  PreProcessPipe1.hpp
classes/Pipe1/PreProcess2/: CMakeLists.txt  PreProcess2Pipe1.cpp  PreProcess2Pipe1.hpp
classes/Pipe1/PreProcess3/: CMakeLists.txt  PreProcess3Pipe1.cpp  PreProcess3Pipe1.hpp
classes/Pipe1/PreProcess4/: CMakeLists.txt  PreProcess4.cpp  PreProcess4.hpp
classes/Pipe1/SegEx/: CMakeLists.txt  Segex2.cpp  Segex2.hpp  SegexPipe1.cpp  SegexPipe1.hpp
classes/Pipe1/SegEx/Extraction/: CMakeLists.txt  ExtractionPipe1.cpp  ExtractionPipe1.hpp
classes/Pipe1/SegEx/HSSegReduced/: CMakeLists.txt  Segmentation2.cpp  Segmentation2.hpp
classes/Pipe1/SegEx/HSSegmentation/: CMakeLists.txt  SegmentationPipe1.cpp  SegmentationPipe1.hpp
classes/Pipe1/SegEx/HSVSegmentation/: CMakeLists.txt  SegmentationPipe1.cpp  SegmentationPipe1.hpp
classes/Pipe2/PreProcess1/: PreProcess1Pipe2.cpp  PreProcess1Pipe2.hpp
classes/Pipe2/Segmentation1/HSVThreshold/: HSVThresh.cpp  HSVThresh.hpp
libs/globals/: CMakeLists.txt  Global.cpp  Global.h
libs/helpers/: CMakeLists.txt  helper.cpp  helper.h
libs/interfaces/: CMakeLists.txt  ContoursInterface.hpp  ExtractionInterface.hpp  PosProcessInterface.hpp  PreProcessInterface.hpp  SegExInterface.hpp  SegmentationInterface.hpp  ThresholdInterface.hpp
libs/libobjects/: Ball.cpp  CMakeLists.txt  Robo.cpp
libs/libvision/: CMakeLists.txt  Colors.cpp  Colors.h  ImgProcess.cpp  ImgProcess.h  PreProcess.cpp  PreProcess.h  VisionManager.cpp  VisionManager.h
libs/types/: types.h
